--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node phonebook.js",
-    "dev": "nodemon phonebook.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/djakimiuk/fullstackopen2022_part3#readme",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.3.3",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
